# contraction

./: .gitignore  README.md  pyproject.toml
contraction/: __init__.py
contraction/_cli/: main.py  parsing.py
contraction/_convert/: convert.py  convert_utils.py  graph_category.py  graph_id.py  graph_metadata.py  puzzle_metadata.py
contraction/_convert/metadata/: metadata.csv
contraction/_gen/: color.py  contraction.py  generator.py  ops.py
contraction/_lib/: color.py  display.py  generator.py  ops.py  runner.py
contraction/_load/: loader.py  planar.py
contraction/_solve/: color.py  contraction.py  ops.py  search.py  solution.py  solver.py  test_search.py
contraction/_train/: contraction_dataset.py  contraction_model.py  metrics.py  plotting.py  training.py  training_example.py
contraction/_visual/: display.py  font.py
tests/: test_version.py
